--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "author": "Eduard Aksamitov <e@edaks.co>",
   "license": "MIT",
+  "homepage": "https://logux.io/",
   "repository": "logux/vuex",
   "engines": {
     "node": ">=10.0.0"
