--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "node": ">=10.0.0"
   },
   "peerDependencies": {
-    "vue": ">=2.6.11",
-    "vuex": ">=3.1.3"
+    "vue": ">=2.6.11"
   },
   "dependencies": {
     "@logux/client": "logux/client",
