--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "vue": ">=2.6.11"
   },
   "dependencies": {
-    "@logux/client": "logux/client",
-    "@logux/core": "logux/core",
+    "@logux/client": "^0.7.0",
+    "@logux/core": "^0.4.0",
     "nanoevents": "^5.1.5",
     "vuex": "^3.1.3"
   },
