--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "homepage": "https://logux.io/",
   "repository": "logux/vuex",
+  "sideEffects": false,
   "engines": {
     "node": ">=10.0.0"
   },
