Add the `vue-class-component` example for subscriptionMixin

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@logux/sharec-config": "^0.6.2",
     "@size-limit/preset-small-lib": "^4.4.4",
     "@vue/test-utils": "^1.0.0-beta.32",
-    "check-dts": "^0.1.4",
+    "check-dts": "^0.3.0",
     "docdash": "^1.2.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
@@ -54,6 +54,7 @@
     "rimraf": "^3.0.2",
     "size-limit": "^4.4.4",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.3",
     "vue-template-compiler": "^2.6.11",
     "vue-typed-mixins": "^0.2.0",
     "yaspeller": "^6.1.0"
