--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "node": ">=10.0.0"
   },
   "peerDependencies": {
-    "vue": ">=2.6.11"
+    "vue": ">=2.6.11",
+    "vuex": ">=3.0.0"
   },
   "dependencies": {
     "@logux/client": "^0.7.0",
     "@logux/core": "^0.4.0",
-    "nanoevents": "^5.1.5",
-    "vuex": "^3.1.3"
+    "nanoevents": "^5.1.5"
   },
   "devDependencies": {
     "@logux/eslint-config": "^36.1.2",
@@ -57,6 +57,7 @@
     "vue-class-component": "^7.2.3",
     "vue-template-compiler": "^2.6.11",
     "vue-typed-mixins": "^0.2.0",
+    "vuex": "^3.1.3",
     "yaspeller": "^6.1.0"
   },
   "husky": {
