--- a/package.json
+++ b/package.json
@@ -88,6 +88,9 @@
   "yaspeller": {
     "lang": "en",
     "ignoreCapitalization": true,
+    "ignoreText": [
+      " \\(by [^)]+\\)."
+    ],
     "dictionary": [
       "versioning",
       "peerDependencies",
