--- a/package.json
+++ b/package.json
@@ -31,28 +31,28 @@
     "nanoevents": "^5.1.5"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^36.1.2",
+    "@logux/eslint-config": "^36.1.3",
     "@logux/sharec-config": "^0.6.2",
-    "@size-limit/preset-small-lib": "^4.4.5",
-    "@vue/test-utils": "^1.0.0-beta.33",
+    "@size-limit/preset-small-lib": "^4.5.0",
+    "@vue/test-utils": "^1.0.2",
     "check-dts": "^0.3.0",
     "docdash": "^1.2.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-jest": "^23.9.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^18.0.1",
+    "eslint-plugin-unicorn": "^19.0.1",
     "husky": "^4.2.5",
-    "jest": "^25.3.0",
-    "lint-staged": "^10.1.6",
+    "jest": "^26.0.1",
+    "lint-staged": "^10.2.2",
     "nanodelay": "^1.0.1",
     "rimraf": "^3.0.2",
-    "size-limit": "^4.4.5",
+    "size-limit": "^4.5.0",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-template-compiler": "^2.6.11",
