--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
       "vuex",
       "mixin",
       "TypeDoc",
-      "WebSocket"
+      "WebSocket",
+      "payload"
     ]
   },
   "sharec": {
