--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@vue/test-utils": "^1.0.3",
     "check-dts": "^0.3.0",
     "docdash": "^1.2.0",
+    "dual-publish": "^0.10.2",
     "eslint": "^7.0.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
