--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@logux/eslint-config": "^36.1.3",
     "@logux/sharec-config": "^0.6.2",
+    "@size-limit/dual-publish": "^4.5.0",
     "@size-limit/preset-small-lib": "^4.5.0",
     "@vue/test-utils": "^1.0.3",
     "check-dts": "^0.3.0",
