test(yaspeller): update dictionary

--- a/package.json
+++ b/package.json
@@ -106,7 +106,8 @@
       "mixin’s",
       "TypeDoc",
       "WebSocket",
-      "payload"
+      "payload",
+      "ES"
     ]
   },
   "sharec": {
