--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "nanoevents": "^5.1.7"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^36.1.3",
+    "@logux/eslint-config": "^39.0.3",
     "@logux/sharec-config": "^0.6.2",
     "@size-limit/dual-publish": "^4.5.0",
     "@size-limit/preset-small-lib": "^4.5.0",
@@ -45,6 +45,7 @@
     "eslint-plugin-jest": "^23.13.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.0.1",
+    "eslint-plugin-prettierx": "^0.12.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
