test(yaspeller): update dictionary

--- a/package.json
+++ b/package.json
@@ -114,7 +114,8 @@
       "WebSocket",
       "payload",
       "ES",
-      "roadmap"
+      "roadmap",
+      "refactor"
     ]
   },
   "sharec": {
