--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@logux/vuex",
-  "version": "0.7.0-beta.1",
+  "version": "0.7.0",
   "description": "Vuex compatible API for Logux",
   "keywords": [
     "logux",
