--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "vue-class-component": "^7.2.3",
     "vue-template-compiler": "^2.6.11",
     "vue-typed-mixins": "^0.2.0",
-    "vuex": "^3.4.0",
+    "vuex": "^4.0.0-beta.4",
     "yaspeller": "^7.0.0"
   },
   "husky": {
