temp: ignore tests for mixin, install and component

--- a/package.json
+++ b/package.json
@@ -77,7 +77,12 @@
       "global": {
         "statements": 100
       }
-    }
+    },
+    "testPathIgnorePatterns": [
+      "mixin",
+      "install",
+      "component"
+    ]
   },
   "eslintConfig": {
     "extends": "@logux/eslint-config",
