--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "node": ">=10.0.0"
   },
   "peerDependencies": {
-    "vue": ">=2.6.11",
-    "vuex": ">=3.0.0"
+    "vue": ">=3.0.0-rc.2",
+    "vuex": ">=4.0.0-beta.4"
   },
   "dependencies": {
     "@logux/client": "^0.9.1",
