revert(temp): enable test for component

--- a/package.json
+++ b/package.json
@@ -80,8 +80,7 @@
     },
     "testPathIgnorePatterns": [
       "mixin",
-      "install",
-      "component"
+      "install"
     ]
   },
   "eslintConfig": {
