chore: remove deprecated install api

--- a/package.json
+++ b/package.json
@@ -79,8 +79,7 @@
       }
     },
     "testPathIgnorePatterns": [
-      "mixin",
-      "install"
+      "mixin"
     ]
   },
   "eslintConfig": {
