--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@size-limit/preset-small-lib": "^4.5.5",
     "@vue/test-utils": "^2.0.0-beta.0",
     "check-dts": "^0.3.2",
-    "docdash": "^1.2.0",
     "dual-publish": "^0.11.0",
     "eslint": "^7.5.0",
     "eslint-config-standard": "^14.1.1",
@@ -56,10 +55,8 @@
     "nanodelay": "^1.0.3",
     "rimraf": "^3.0.2",
     "size-limit": "^4.5.5",
+    "typescript": "^3.9.7",
     "vue": "^3.0.0-rc.4",
-    "vue-class-component": "^7.2.3",
-    "vue-template-compiler": "^2.6.11",
-    "vue-typed-mixins": "^0.2.0",
     "vuex": "^4.0.0-beta.4",
     "yaspeller": "^7.0.0"
   },
