--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     },
     {
       "name": "Helpers",
-      "import": "{ loguxComponent }",
+      "import": "{ loguxComponent, useSubscription }",
       "limit": "1 KB"
     }
   ],
