test(yaspeller): add "composable" to the dictionary

--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
       "payload",
       "ES",
       "roadmap",
-      "refactor"
+      "refactor",
+      "composable"
     ]
   },
   "sharec": {
