test(yaspeller): add "unsubscribes" to the dictionary

--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
       "ES",
       "roadmap",
       "refactor",
-      "composable"
+      "composable",
+      "unsubscribes"
     ]
   },
   "sharec": {
