--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@logux/client": "^0.9.2",
     "@logux/core": "^0.6.1",
+    "@vue/devtools-api": "^6.0.0-beta.2",
     "nanoevents": "^5.1.8"
   },
   "devDependencies": {
@@ -74,7 +75,11 @@
       "global": {
         "statements": 100
       }
-    }
+    },
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/devtools/"
+    ]
   },
   "eslintConfig": {
     "extends": "@logux/eslint-config",
@@ -94,6 +99,11 @@
       "name": "Store + Helpers",
       "import": "{ CrossTabClient, createStoreCreator, useStore, useSubscription, Subscribe }",
       "limit": "11 KB"
+    },
+    {
+      "name": "Devtools",
+      "import": "{ devtools }",
+      "limit": "1 KB"
     }
   ],
   "yaspeller": {
