test(yaspeller): update dictionary

--- a/package.json
+++ b/package.json
@@ -130,7 +130,8 @@
       "roadmap",
       "refactor",
       "composable",
-      "unsubscribes"
+      "unsubscribes",
+      "devtools"
     ]
   },
   "sharec": {
