--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "nanodelay": "^1.0.3",
     "rimraf": "^3.0.2",
     "size-limit": "^4.6.0",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2",
     "vue": "^3.0.0-rc.10",
     "vuex": "^4.0.0-beta.4",
