--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@logux/sharec-config": "^0.7.4",
     "@size-limit/dual-publish": "^4.6.0",
     "@size-limit/preset-small-lib": "^4.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "@vue/test-utils": "^2.0.0-beta.4",
     "check-dts": "^0.3.3",
     "dual-publish": "^0.11.0",
@@ -55,6 +57,7 @@
     "nanodelay": "^1.0.3",
     "rimraf": "^3.0.2",
     "size-limit": "^4.6.0",
+    "ts-jest": "^26.3.0",
     "typescript": "^4.0.2",
     "vue": "^3.0.0-rc.11",
     "vuex": "^4.0.0-beta.4",
@@ -70,6 +73,7 @@
     "*.js": "eslint"
   },
   "jest": {
+    "preset": "ts-jest",
     "coverageThreshold": {
       "global": {
         "statements": 100
@@ -77,13 +81,18 @@
     }
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config",
+    "extends": "@logux/eslint-config/ts",
     "rules": {
       "prettierx/options": [
         0
-      ]
+      ],
+      "@typescript-eslint/no-var-requires": "off",
+      "@typescript-eslint/no-explicit-any": "off"
     }
   },
+  "eslintIgnore": [
+    "**/errors.ts"
+  ],
   "size-limit": [
     {
       "name": "Store",
