test(eslint): lint ts on commit

--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
   },
   "lint-staged": {
     "*.md": "yaspeller",
-    "*.js": "eslint"
+    "*.js": "eslint",
+    "*.ts": "eslint"
   },
   "jest": {
     "preset": "ts-jest",
