--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
     "node": ">=10.0.0"
   },
   "peerDependencies": {
+    "@logux/client": "0.9.2",
+    "@logux/core": "0.6.2",
     "vue": ">=3.0.0",
     "vuex": ">=4.0.0-beta.4"
   },
   "dependencies": {
-    "@logux/client": "^0.9.2",
-    "@logux/core": "^0.6.2",
     "nanoevents": "^5.1.8"
   },
   "devDependencies": {
+    "@logux/client": "^0.9.2",
+    "@logux/core": "^0.6.2",
     "@logux/eslint-config": "^40.0.5",
     "@logux/sharec-config": "^0.7.4",
     "@size-limit/dual-publish": "^4.6.0",
