--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "node": ">=10.0.0"
   },
   "peerDependencies": {
-    "@logux/client": "0.9.2",
-    "@logux/core": "0.6.2",
+    "@logux/client": "^0.9.2",
+    "@logux/core": "^0.6.2",
     "vue": ">=3.0.0",
     "vuex": ">=4.0.0-beta.4"
   },
