--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "sideEffects": false,
   "types": "./index.d.ts",
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^12.0.0 || >=14.0.0"
   },
   "peerDependencies": {
     "@logux/client": "^0.9.2",
