--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "node": "^12.0.0 || >=14.0.0"
   },
   "peerDependencies": {
-    "@logux/client": "^0.9.2",
+    "@logux/client": "logux/client#next",
     "@logux/core": "^0.6.2",
     "vue": ">=3.0.2",
     "vuex": ">=4.0.0-beta.4"
@@ -32,7 +32,7 @@
     "nanoevents": "^5.1.10"
   },
   "devDependencies": {
-    "@logux/client": "^0.9.2",
+    "@logux/client": "logux/client#next",
     "@logux/core": "^0.6.2",
     "@logux/eslint-config": "^41.0.2",
     "@logux/sharec-config": "^0.7.9",
