--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,18 +18,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 15
-      - name: Get Yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Yarn cache
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: logux-vuex-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            logux-vuex-yarn-
-      - name: Install
-        run: yarn install --frozen-lockfile
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
       - name: Test
         run: yarn test
   short:
@@ -46,6 +36,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        uses: bahmutov/npm-install@v1
       - name: Run code tests
         run: npx jest
