ci: use unified config (#43)
* Unify CI config

* Cache setup-node

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,21 +15,11 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 15
-      - name: Get Yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Yarn cache
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: logux-vuex-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            logux-vuex-yarn-
-      - name: Install
-        run: yarn install --frozen-lockfile
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
       - name: Test
         run: yarn test
   short:
@@ -42,10 +32,10 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
       - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        uses: bahmutov/npm-install@v1
       - name: Run code tests
         run: npx jest
