--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": "^12.0.0 || >=14.0.0"
   },
   "peerDependencies": {
+    "@vue/devtools-api": "^6.0.0-beta.2",
     "@logux/client": "logux/client#next",
     "@logux/core": "^0.6.2",
     "vue": ">=3.0.2",
