--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "websocket"
   ],
   "scripts": {
-    "spell": "yaspeller *.md",
-    "clean": "rimraf coverage/",
-    "test": "jest --coverage && eslint . && check-dts && size-limit && yarn spell"
+    "test": "jest --coverage && eslint . && check-dts && size-limit && yaspeller *.md"
   },
   "author": "Eduard Aksamitov <e@edaks.co>",
   "license": "MIT",
   "homepage": "https://logux.io/",
   "repository": "logux/vuex",
+  "types": "./index.d.ts",
   "sideEffects": false,
   "engines": {
     "node": ">=10.0.0"
@@ -28,20 +27,20 @@
   "dependencies": {
     "@logux/client": "^0.9.2",
     "@logux/core": "^0.6.2",
-    "nanoevents": "^5.1.8"
+    "nanoevents": "^5.1.10"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^40.0.5",
-    "@logux/sharec-config": "^0.7.4",
-    "@size-limit/dual-publish": "^4.6.0",
-    "@size-limit/preset-small-lib": "^4.6.0",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
+    "@logux/eslint-config": "^42.2.1",
+    "@logux/sharec-config": "^0.8.4",
+    "@size-limit/dual-publish": "^4.7.0",
+    "@size-limit/preset-small-lib": "^4.7.0",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "@vue/test-utils": "^2.0.0-beta.6",
-    "check-dts": "^0.3.3",
+    "check-dts": "^0.4.0",
     "dual-publish": "^0.11.0",
-    "eslint": "^7.11.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint": "^7.13.0",
+    "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.0",
     "eslint-plugin-node": "^11.1.0",
@@ -49,16 +48,14 @@
     "eslint-plugin-prettierx": "^0.14.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^22.0.0",
+    "eslint-plugin-unicorn": "^23.0.0",
     "husky": "^4.3.0",
-    "jest": "^26.5.2",
-    "lint-staged": "^10.4.0",
-    "nanodelay": "^1.0.3",
-    "rimraf": "^3.0.2",
-    "size-limit": "^4.6.0",
-    "ts-jest": "^26.4.1",
-    "typescript": "^4.0.3",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.1",
+    "nanodelay": "^1.0.6",
+    "size-limit": "^4.7.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-beta.4",
     "yaspeller": "^7.0.0"
@@ -70,8 +67,8 @@
   },
   "lint-staged": {
     "*.md": "yaspeller",
-    "*.js": "eslint",
-    "*.ts": "eslint"
+    "*.js": "eslint --fix",
+    "*.ts": "eslint --fix"
   },
   "jest": {
     "preset": "ts-jest",
@@ -135,6 +132,6 @@
   },
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.7.4"
+    "version": "0.8.4"
   }
 }
