chore: update dev deps and practices (#44)
Co-authored-by: Eduard Aksamitov <e@edaks.co>

--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "websocket"
   ],
   "scripts": {
-    "spell": "yaspeller *.md",
-    "clean": "rimraf coverage/",
-    "test": "jest --coverage && eslint . && check-dts && size-limit --highlight-less && yarn spell yaspeller *.md"
+    "test": "jest --coverage && eslint . && check-dts && size-limit && yaspeller *.md"
   },
   "author": "Eduard Aksamitov <e@edaks.co>",
   "license": "MIT",
   "homepage": "https://logux.io/",
   "repository": "logux/vuex",
-  "sideEffects": false,
   "types": "./index.d.ts",
+  "sideEffects": false,
   "engines": {
     "node": "^12.0.0 || >=14.0.0"
   },
@@ -41,7 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "@vue/test-utils": "^2.0.0-beta.9",
-    "check-dts": "^0.3.3",
+    "check-dts": "^0.4.0",
     "dual-publish": "^0.11.0",
     "eslint": "^7.13.0",
     "eslint-config-standard": "^16.0.1",
@@ -52,7 +50,6 @@
     "eslint-plugin-prettierx": "^0.14.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-standard": "^4.1.0",
     "eslint-plugin-unicorn": "^23.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
