ci: update test action with new practices

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,30 +4,38 @@ on:
   - push
   - pull_request
 
+env:
+  FORCE_COLOR: 2
+
 jobs:
-  build:
-    name: Test
+  full:
+    name: Node.js 15 Full
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 1
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
-          node-version: ">=13.12.0"
-      - name: Get Yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "::set-output name=dir::$(yarn cache dir)"
-      - name: Yarn cache
-        uses: actions/cache@v1
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: logux-vuex-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            logux-vuex-yarn-
-      - name: Install
-        run: yarn install --frozen-lockfile
+          node-version: 15
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
       - name: Test
         run: yarn test
+  short:
+    strategy:
+      matrix:
+        node-version: [14, 12]
+    name: Node.js ${{ matrix.node-version }} Quick
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Install Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2-beta
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+      - name: Run code tests
+        run: npx jest
