--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "homepage": "https://logux.io/",
   "repository": "logux/vuex",
+  "types": "./index.d.ts",
   "sideEffects": false,
   "engines": {
     "node": ">=10.0.0"
