test(yaspeller): update dictionary

--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
       "payload",
       "ES",
       "roadmap",
-      "refactor"
+      "refactor",
+      "nanoevents"
     ]
   },
   "sharec": {
