--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "license": "MIT",
   "homepage": "https://logux.io/",
   "repository": "logux/vuex",
-  "sideEffects": false,
   "types": "./index.d.ts",
+  "sideEffects": false,
+  "type": "module",
   "engines": {
     "node": "^12.0.0 || >=14.0.0"
   },
@@ -34,13 +35,11 @@
     "@logux/core": "logux/core#next",
     "@logux/eslint-config": "^44.0.2",
     "@logux/sharec-config": "^0.8.5",
-    "@size-limit/dual-publish": "^4.9.1",
-    "@size-limit/preset-small-lib": "^4.9.1",
+    "@size-limit/preset-small-lib": "^4.9.2",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
     "@vue/test-utils": "^2.0.0-beta.14",
     "check-dts": "^0.4.1",
-    "dual-publish": "^1.0.3",
     "eslint": "^7.17.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -53,9 +52,10 @@
     "eslint-plugin-unicorn": "^26.0.0",
     "husky": "^4.3.7",
     "jest": "^26.6.3",
+    "jest-esm-transformer": "^1.0.0",
     "lint-staged": "^10.5.3",
     "nanodelay": "^1.0.6",
-    "size-limit": "^4.9.1",
+    "size-limit": "^4.9.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "vue": "^3.0.5",
@@ -74,6 +74,9 @@
   },
   "jest": {
     "preset": "ts-jest",
+    "transform": {
+      ".js": "jest-esm-transformer"
+    },
     "coverageThreshold": {
       "global": {
         "statements": 100
@@ -83,6 +86,13 @@
   "eslintConfig": {
     "extends": "@logux/eslint-config/ts",
     "rules": {
+      "import/extensions": [
+        "error",
+        "always",
+        {
+          "ignorePackages": true
+        }
+      ],
       "prettierx/options": "off",
       "@typescript-eslint/no-var-requires": "off",
       "@typescript-eslint/no-explicit-any": "off"
