--- a/package.json
+++ b/package.json
@@ -84,9 +84,7 @@
   "eslintConfig": {
     "extends": "@logux/eslint-config/ts",
     "rules": {
-      "prettierx/options": [
-        0
-      ],
+      "prettierx/options": "off",
       "@typescript-eslint/no-var-requires": "off",
       "@typescript-eslint/no-explicit-any": "off"
     }
