--- a/package.json
+++ b/package.json
@@ -77,6 +77,9 @@
     "transform": {
       ".js": "jest-esm-transformer"
     },
+    "transformIgnorePatterns": [
+      "node_modules/(?!@logux)"
+    ],
     "coverageThreshold": {
       "global": {
         "statements": 100
