--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
   "devDependencies": {
     "@logux/eslint-config": "^45.1.0",
     "@logux/sharec-config": "^0.7.4",
-    "@size-limit/dual-publish": "^4.9.2",
-    "@size-limit/preset-small-lib": "^4.9.2",
+    "@size-limit/dual-publish": "^4.10.1",
+    "@size-limit/preset-small-lib": "^4.10.1",
+    "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "@vue/test-utils": "^2.0.0-beta.6",
+    "@vue/test-utils": "^2.0.0-rc.3",
     "check-dts": "^0.4.4",
-    "dual-publish": "^1.0.3",
+    "dual-publish": "^1.0.4",
     "eslint": "^7.21.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
@@ -56,9 +57,9 @@
     "lint-staged": "^10.5.4",
     "nanodelay": "^1.0.6",
     "rimraf": "^3.0.2",
-    "size-limit": "^4.9.2",
-    "ts-jest": "^26.5.1",
-    "typescript": "^4.1.5",
+    "size-limit": "^4.10.1",
+    "ts-jest": "^26.5.3",
+    "typescript": "^4.2.3",
     "vue": "^3.0.7",
     "vuex": "^4.0.0",
     "yaspeller": "^7.0.0"
