--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "websocket"
   ],
   "scripts": {
-    "spell": "yaspeller *.md",
-    "clean": "rimraf coverage/",
-    "test": "jest --coverage && eslint . && check-dts && size-limit && yarn spell"
+    "test": "jest --coverage && eslint . && check-dts && size-limit && yaspeller *.md"
   },
   "author": "Eduard Aksamitov <e@edaks.co>",
   "license": "MIT",
@@ -33,7 +31,7 @@
   },
   "devDependencies": {
     "@logux/eslint-config": "^45.1.0",
-    "@logux/sharec-config": "^0.7.4",
+    "@logux/sharec-config": "^0.8.5",
     "@size-limit/dual-publish": "^4.10.1",
     "@size-limit/preset-small-lib": "^4.10.1",
     "@types/jest": "^26.0.20",
@@ -134,6 +132,6 @@
   },
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.7.4"
+    "version": "0.8.5"
   }
 }
