--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@logux/eslint-config": "^45.2.1",
-    "@logux/sharec-config": "^0.8.5",
+    "@logux/sharec-config": "^0.9.0",
     "@size-limit/dual-publish": "^4.10.1",
     "@size-limit/preset-small-lib": "^4.10.1",
     "@types/jest": "^26.0.22",
@@ -46,7 +46,6 @@
     "eslint-plugin-jest": "^24.3.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.1.0",
-    "eslint-plugin-prettierx": "^0.17.1",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^29.0.0",
@@ -54,7 +53,9 @@
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "nanodelay": "^1.0.8",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "simple-git-hooks": "^2.0.2",
     "size-limit": "^4.10.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3",
@@ -62,15 +63,19 @@
     "vuex": "^4.0.0",
     "yaspeller": "^7.0.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "npx lint-staged"
   },
   "lint-staged": {
     "*.md": "yaspeller",
-    "*.js": "eslint",
-    "*.ts": "eslint"
+    "*.js": [
+      "prettier --write",
+      "eslint"
+    ],
+    "*.ts": [
+      "prettier --write",
+      "eslint"
+    ]
   },
   "jest": {
     "preset": "ts-jest",
@@ -80,10 +85,17 @@
       }
     }
   },
+  "prettier": {
+    "arrowParens": "avoid",
+    "jsxSingleQuote": false,
+    "quoteProps": "consistent",
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none"
+  },
   "eslintConfig": {
     "extends": "@logux/eslint-config/ts",
     "rules": {
-      "prettierx/options": "off",
       "@typescript-eslint/no-var-requires": "off",
       "@typescript-eslint/no-explicit-any": "off"
     }
@@ -133,6 +145,6 @@
   },
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.8.5"
+    "version": "0.9.0"
   }
 }
