--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "./": "./"
   },
   "engines": {
-    "node": "^12.0.0 || >=14.0.0"
+    "node": "^12.0.0 || ^14.0.0 || >=16.0.0"
   },
   "peerDependencies": {
     "@logux/client": "logux/client#next",
