--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "websocket"
   ],
   "scripts": {
-    "test": "jest --coverage && eslint . && check-dts && size-limit && yaspeller *.md"
+    "test": "node --experimental-vm-modules node_modules/.bin/jest --coverage && eslint . && check-dts && size-limit && yaspeller *.md"
   },
   "author": "Eduard Aksamitov <e@edaks.co>",
   "license": "MIT",
@@ -34,6 +34,7 @@
     "nanoevents": "^6.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
     "@logux/client": "logux/client#next",
     "@logux/core": "logux/core#next",
     "@logux/eslint-config": "^45.4.1",
@@ -53,14 +54,13 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^31.0.0",
-    "jest": "^26.6.3",
-    "jest-esm-transformer": "^1.0.0",
+    "jest": "^27.0.0-next.8",
     "lint-staged": "^10.5.4",
     "nanodelay": "^2.0.0",
     "prettier": "^2.2.1",
     "simple-git-hooks": "^2.4.1",
     "size-limit": "^4.10.2",
-    "ts-jest": "^26.5.5",
+    "ts-jest": "^27.0.0-next.11",
     "typescript": "^4.2.4",
     "vue": "^3.0.10",
     "vuex": "^4.0.0",
@@ -81,9 +81,12 @@
     ]
   },
   "jest": {
-    "preset": "ts-jest",
-    "transform": {
-      ".js": "jest-esm-transformer"
+    "preset": "ts-jest/presets/default-esm",
+    "testEnvironment": "jsdom",
+    "globals": {
+      "ts-jest": {
+        "useESM": true
+      }
     },
     "transformIgnorePatterns": [
       "node_modules/(?!@logux)"
@@ -103,7 +106,7 @@
     "trailingComma": "none"
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config/ts",
+    "extends": "@logux/eslint-config/esm",
     "rules": {
       "@typescript-eslint/no-var-requires": "off",
       "@typescript-eslint/no-explicit-any": "off"
