--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "node": "^12.0.0 || ^14.0.0 || >=16.0.0"
   },
   "peerDependencies": {
-    "@logux/client": "logux/client#next",
-    "@logux/core": "logux/core#next",
+    "@logux/client": "^0.10.0",
+    "@logux/core": "^0.7.0",
     "vue": ">=3.0.11",
     "vuex": ">=4.0.0"
   },
@@ -36,8 +36,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
-    "@logux/client": "logux/client#next",
-    "@logux/core": "logux/core#next",
+    "@logux/client": "^0.10.0",
+    "@logux/core": "^0.7.0",
     "@logux/eslint-config": "^45.4.1",
     "@logux/sharec-config": "^0.10.1",
     "@size-limit/preset-small-lib": "^4.10.2",
