test(jest): allow conditional expect

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
   "eslintConfig": {
     "extends": "@logux/eslint-config/esm",
     "rules": {
+      "jest/no-conditional-expect": "off",
       "@typescript-eslint/no-var-requires": "off",
       "@typescript-eslint/no-explicit-any": "off"
     }
