test(yaspeller): update dictionary

--- a/package.json
+++ b/package.json
@@ -161,7 +161,9 @@
       "refactor",
       "composable",
       "unsubscribes",
-      "nanoevents"
+      "nanoevents",
+      "ESM",
+      "js"
     ]
   },
   "sharec": {
