--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "node": "^12.0.0 || ^14.0.0 || >=16.0.0"
   },
   "peerDependencies": {
-    "@logux/client": "^0.10.0",
-    "@logux/core": "^0.7.0",
+    "@logux/client": ">=0.10.0",
+    "@logux/core": ">=0.7.0",
     "vue": ">=3.1.5",
     "vuex": ">=4.0.2"
   },
@@ -35,35 +35,37 @@
     "nanoevents": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@logux/client": "^0.10.0",
-    "@logux/core": "^0.7.0",
-    "@logux/eslint-config": "^45.4.1",
-    "@logux/sharec-config": "^0.10.1",
-    "@size-limit/preset-small-lib": "^4.10.2",
-    "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "@vue/test-utils": "^2.0.0-rc.6",
-    "check-dts": "^0.4.4",
-    "clean-publish": "^2.1.1",
-    "eslint": "^7.25.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.6",
+    "@babel/core": "^7.15.0",
+    "@logux/actions": "^0.2.1",
+    "@logux/client": "^0.12.1",
+    "@logux/core": "^0.7.1",
+    "@logux/eslint-config": "^45.4.7",
+    "@logux/sharec-config": "^0.10.2",
+    "@size-limit/preset-small-lib": "^5.0.2",
+    "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
+    "@vue/test-utils": "^2.0.0-rc.12",
+    "check-dts": "^0.5.5",
+    "clean-publish": "^2.2.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prefer-let": "^1.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^31.0.0",
-    "jest": "^27.0.0-next.8",
-    "lint-staged": "^10.5.4",
+    "eslint-plugin-unicorn": "^35.0.0",
+    "jest": "^27.0.6",
+    "lint-staged": "^11.1.2",
     "nanodelay": "^2.0.0",
-    "prettier": "^2.2.1",
-    "simple-git-hooks": "^2.4.1",
-    "size-limit": "^4.10.2",
-    "ts-jest": "^27.0.0-next.11",
-    "typescript": "^4.2.4",
+    "nanostores": "^0.4.1",
+    "prettier": "^2.3.2",
+    "simple-git-hooks": "^2.5.1",
+    "size-limit": "^5.0.2",
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5",
     "vue": "^3.1.5",
     "vuex": "^4.0.2",
     "yaspeller": "^7.0.0"
@@ -168,6 +170,6 @@
   },
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.10.1"
+    "version": "0.10.2"
   }
 }
