--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@logux/client": "^0.13.1",
     "@logux/core": "^0.7.1",
     "@logux/eslint-config": "^45.4.7",
-    "@logux/sharec-config": "^0.10.2",
+    "@logux/sharec-config": "^0.11.0",
     "@size-limit/preset-small-lib": "^5.0.3",
     "@types/jest": "^27.0.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
@@ -89,7 +89,8 @@
     "testEnvironment": "jsdom",
     "globals": {
       "ts-jest": {
-        "useESM": true
+        "useESM": true,
+        "isolatedModules": true
       }
     },
     "transformIgnorePatterns": [
@@ -170,6 +171,6 @@
   },
   "sharec": {
     "config": "@logux/sharec-config",
-    "version": "0.10.2"
+    "version": "0.11.0"
   }
 }
