--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,41 +1,58 @@
 name: Test
 
-on:
-  - push
-  - pull_request
-
-env:
-  FORCE_COLOR: 2
+on: [push, pull_request]
 
 jobs:
   full:
-    name: Node.js 15 Full
+    name: Node.js 17 Full
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
-      - name: Install Node.js
-        uses: actions/setup-node@v2-beta
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: 15
+          version: 6.24.2
+
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 17
+          cache: pnpm
+
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-      - name: Test
-        run: yarn test
+        run: pnpm install --frozen-lockfile
+
+      - name: Run tests
+        run: pnpm test
+        env:
+          FORCE_COLOR: 2
   short:
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14, 12]
+        node-version: [16, 14, 12]
     name: Node.js ${{ matrix.node-version }} Quick
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6.24.2
+
       - name: Install Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: pnpm
+
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
-      - name: Run code tests
-        run: npx jest
+        run: pnpm install --frozen-lockfile
+
+      - name: Run unit tests
+        run: pnpm test
+        env:
+          FORCE_COLOR: 2
