--- a/package.json
+++ b/package.json
@@ -9,66 +9,69 @@
     "websocket"
   ],
   "scripts": {
-    "test": "jest --coverage && eslint . && check-dts && size-limit && yaspeller *.md"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --coverage && eslint . && check-dts && size-limit"
   },
   "author": "Eduard Aksamitov <e@edaks.co>",
   "license": "MIT",
   "homepage": "https://logux.io/",
   "repository": "logux/vuex",
-  "types": "./index.d.ts",
   "sideEffects": false,
+  "type": "module",
+  "types": "./index.d.ts",
   "engines": {
-    "node": "^12.0.0 || >=14.0.0"
+    "node": "^12.0.0 || ^14.0.0 || >=16.0.0"
   },
   "peerDependencies": {
-    "vue": ">=2.6.12",
+    "@logux/client": ">=0.10.0",
+    "@logux/core": ">=0.7.0",
+    "vue": ">=2.6.14",
     "vuex": ">=3.6.2"
   },
   "dependencies": {
-    "@logux/client": "^0.9.3",
-    "@logux/core": "^0.6.2",
     "nanoevents": "^5.1.13"
   },
   "devDependencies": {
-    "@logux/eslint-config": "^44.1.2",
-    "@logux/sharec-config": "^0.6.2",
-    "@size-limit/dual-publish": "^4.10.1",
-    "@size-limit/preset-small-lib": "^4.10.1",
+    "@jest/globals": "^27.4.4",
+    "@logux/client": "^0.14.4",
+    "@logux/core": "^0.7.2",
+    "@logux/eslint-config": "46.0.1",
+    "@size-limit/preset-small-lib": "^7.0.4",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "@vue/test-utils": "^1.1.3",
-    "check-dts": "^0.4.4",
-    "dual-publish": "^1.0.5",
-    "eslint": "^7.22.0",
+    "check-dts": "^0.6.5",
+    "eslint": "^8.5.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
+    "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prefer-let": "^1.1.0",
-    "eslint-plugin-prettierx": "^0.17.1",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-prefer-let": "^3.0.1",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^28.0.2",
-    "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.5.4",
-    "nanodelay": "^1.0.8",
-    "size-limit": "^4.10.1",
+    "eslint-plugin-unicorn": "^39.0.0",
+    "jest": "^27.4.5",
+    "nano-staged": "^0.5.0",
+    "nanodelay": "^2.0.2",
+    "nanostores": "^0.5.8",
+    "simple-git-hooks": "^2.7.0",
+    "size-limit": "^7.0.4",
+    "typescript": "^4.5.4",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-template-compiler": "^2.6.12",
     "vue-typed-mixins": "^0.2.0",
     "vuex": "^3.6.2",
-    "yaspeller": "^7.0.0"
+    "ws": "^8.4.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "simple-git-hooks": {
+    "pre-commit": "./node_modules/.bin/nano-staged"
   },
-  "lint-staged": {
-    "*.md": "yaspeller",
-    "*.js": "eslint"
+  "nano-staged": {
+    "*.js": "eslint --fix"
   },
   "jest": {
+    "transform": {},
+    "testEnvironment": "jsdom",
     "coverageThreshold": {
       "global": {
         "statements": 100
@@ -76,11 +79,14 @@
     }
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config",
+    "extends": "@logux/eslint-config/esm",
     "rules": {
-      "prettierx/options": "off"
+      "@typescript-eslint/no-explicit-any": "off"
     }
   },
+  "eslintIgnore": [
+    "**/errors.ts"
+  ],
   "size-limit": [
     {
       "name": "Store",
@@ -92,35 +98,5 @@
       "import": "{ createLogux, loguxMixin, loguxComponent }",
       "limit": "11 KB"
     }
-  ],
-  "yaspeller": {
-    "lang": "en",
-    "ignoreCapitalization": true,
-    "ignoreText": [
-      " \\(by [^)]+\\)"
-    ],
-    "dictionary": [
-      "versioning",
-      "peerDependencies",
-      "npm",
-      "vue",
-      "GraphQL",
-      "io",
-      "logux",
-      "vuex",
-      "mixin",
-      "mixin’s",
-      "TypeDoc",
-      "WebSocket",
-      "payload",
-      "ES",
-      "roadmap",
-      "refactor",
-      "nanoevents"
-    ]
-  },
-  "sharec": {
-    "config": "@logux/sharec-config",
-    "version": "0.6.2"
-  }
+  ]
 }
