--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,8 @@
-yarn-error.log
-yarn.lock
-
-**/*.test.ts
-**/types.ts
-**/errors.ts
+pnpm-lock.yaml
 tsconfig.json
+
 coverage/
 test/
+**/*.test.*
+**/types.ts
+**/errors.ts
