--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "sideEffects": false,
   "type": "module",
   "types": "./index.d.ts",
+  "exports": {
+    ".": "./index.js",
+    "./package.json": "./package.json"
+  },
   "engines": {
     "node": "^12.0.0 || ^14.0.0 || >=16.0.0"
   },
