--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,38 +2,57 @@ name: Test
 
 on: [push, pull_request]
 
-env:
-  FORCE_COLOR: 2
-
 jobs:
   full:
-    name: Node.js 16 Full
+    name: Node.js 17 Full
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6.23.6
+
       - name: Install Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: 16
+          node-version: 17
+          cache: pnpm
+
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: pnpm install --frozen-lockfile
+
       - name: Run tests
-        run: yarn test
+        run: pnpm test
+        env:
+          FORCE_COLOR: 2
   short:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14, 12]
+        node-version: [16, 14, 12]
     name: Node.js ${{ matrix.node-version }} Quick
     steps:
       - name: Checkout the repository
         uses: actions/checkout@v2
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 6.23.6
+
       - name: Install Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          cache: pnpm
+
       - name: Install dependencies
-        uses: bahmutov/npm-install@v1
+        run: pnpm install --frozen-lockfile
+
       - name: Run unit tests
-        run: node --experimental-vm-modules node_modules/.bin/jest
+        run: pnpm test
+        env:
+          FORCE_COLOR: 2
