--- a/package.json
+++ b/package.json
@@ -35,34 +35,32 @@
     "nanoevents": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.0",
+    "@jest/globals": "^27.4.4",
     "@logux/actions": "^0.2.1",
-    "@logux/client": "^0.13.1",
+    "@logux/client": "^0.14.4",
     "@logux/core": "^0.7.1",
-    "@logux/eslint-config": "^45.4.7",
-    "@size-limit/preset-small-lib": "^5.0.3",
+    "@logux/eslint-config": "46.0.1",
+    "@size-limit/preset-small-lib": "^7.0.4",
     "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
     "@vue/test-utils": "^2.0.0-rc.12",
-    "check-dts": "^0.5.5",
-    "clean-publish": "^2.2.0",
-    "eslint": "^7.32.0",
+    "check-dts": "^0.6.5",
+    "eslint": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prefer-let": "^1.1.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-prefer-let": "^3.0.1",
+    "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-unicorn": "^35.0.0",
+    "eslint-plugin-unicorn": "^39.0.0",
     "jest": "^27.0.6",
     "nano-staged": "^0.5.0",
     "nanodelay": "^2.0.0",
-    "nanostores": "^0.4.3",
-    "prettier": "^2.3.2",
+    "nanostores": "^0.5.8",
     "simple-git-hooks": "^2.6.1",
-    "size-limit": "^5.0.3",
+    "size-limit": "^7.0.4",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5",
     "vue": "^3.2.3",
