--- a/.npmignore
+++ b/.npmignore
@@ -1,9 +1,9 @@
-yarn-error.log
-yarn.lock
+pnpm-lock.yaml
+tsconfig.json
+
+coverage/
+test/
 
 **/*.test.ts
 **/types.ts
 **/errors.ts
-tsconfig.json
-coverage/
-test/
