--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "./package.json": "./package.json"
   },
   "engines": {
-    "node": "^12.0.0 || ^14.0.0 || ^16.0.0 || ^18.0.0 || >=20.0.0"
+    "node": "^16.0.0 || ^18.0.0 || >=20.0.0"
   },
   "peerDependencies": {
     "@logux/client": ">=0.10.0",
